# mlops-research-stack

./: .gitignore  README.md  data.dvc  docker-compose.yml  docker-compose_server.yml  multiple_developer_worfklow.md  traefik-users.txt
.dvc/: config
auth-scripts/: README.md
deployment/landing/: index.html
mlflow-server/: Dockerfile  README.md  docker-compose.yml
mlops-system-dagster/: .gitignore  Dockerfile  README.md  pyproject.toml  test_asset_loading.py  workspace.yaml
mlops-system-dagster/src/code_locations/linear_regression/: definitions.py
mlops-system-dagster/src/code_locations/resnet_experiment/: dataset.py  definitions.py  model.py
mlops-system-dagster/src/code_locations/xgboost_experiment/: definitions.py  model.py
mlops-system-dagster/src/mlops_system_dagster/: definitions.py
mlops-system-dagster/src/mlops_system_dagster/core_utils/: dvc_utils.py  evaluation.py  models.py  preprocessing.py  schemas.py  training.py
mlops-system-dagster/src/mlops_system_dagster/defs/: assets.py  monitoring_assets.py  resources.py  schedules.py  test.py
model-deployment/: Dockerfile  README.md  app.py  pyproject.toml
scripts/: README.md  gen_htpasswd.py
setup-scripts/: .env.migration.example  MIGRATION_SCRIPTS_README.md  SERVER_MIGRATION.md  migrate-export.sh  migrate-import.sh  setup-new-deployment.sh  setup-permissions.sh
