[project]
name = "mlops_system_dagster"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.12",
    "dvc[ssh]",
    "pandas",
    "scikit-learn",
    "Pillow",
    "mlflow",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "mlops_system_dagster"
registry_modules = [
    "mlops_system_dagster.components.*",
]


