[project]
name = "model-deployment"
version = "0.1.0"
description = "Model serving with gradio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "mlflow>=3.4.0",
    "psutil==7.1.0",
    "pandas",
    "debugpy",
    "torch",
    "torchvision",
    "xgboost"
]
